--- a/HW4/Index.html
+++ b/HW4/Index.html
@@ -149,7 +149,7 @@
         </div>
         <div id="footer">
             <div style="margin-right:5px;">
-                <img style="width:40px;" src="img/ou.png" />
+                <img style="width:40px;" src="img/OU.png" />
             </div>
             <div>
                 Management Information Systems<br />
