--- a/HW4/Index.html
+++ b/HW4/Index.html
@@ -88,7 +88,7 @@
     <div id="main">
         <div id="header">
             <div id="logodiv">
-                <img style="height:50px;" src="img/MIS.png" />
+                <img style="height:50px;" src="IMG/MIS.png" />
             </div>
             <div id="linkdiv">
                 <a href="https://www.ou.edu/price/mis">
@@ -108,7 +108,7 @@
 
             </div>
             <div id="imgdiv">
-                <img style="width:400px;" src="img/price.jpg"/>
+                <img style="width:400px;" src="IMG/price.jpg"/>
             </div>
             <div id="aboutdiv">
                 <span style="color:darkred">What is Management Information Systems?</span>
@@ -149,7 +149,7 @@
         </div>
         <div id="footer">
             <div style="margin-right:5px;">
-                <img style="width:40px;" src="img/OU.png" />
+                <img style="width:40px;" src="IMG/OU.png" />
             </div>
             <div>
                 Management Information Systems<br />
